feat: add class search and class view, add DOM and outpur search data

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,9 +14,14 @@
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="msapplication-config" content="./assets/favicons/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
-	<title>Document</title>
+	<title>GitHub API Repo</title>
 </head>
+
 <body>
-	<p>hello</p>
+	
+	<div id="app"></div>
+
+	<script src="./js_modules/main.js"></script>
 </body>
+
 </html>
