--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,10 @@
 </head>
 
 <body>
-	
-	<div id="app"></div>
 
-	<script src="./js_modules/main.js"></script>
+	<div id="app" class="app"></div>
+
+	<script src="./js_modules/main.js" type="module"></script>
 </body>
 
 </html>
